--- a/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
@@ -88,6 +88,9 @@
     <Thickness x:Key="Infomaniak.Style.Thickness.Left.S">12,0,0,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Left.M">16,0,0,0</Thickness>
 
+    <Thickness x:Key="Infomaniak.Style.Thickness.Right.XS">0,0,8,0</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Right.S">,0,12,0</Thickness>
+    <Thickness x:Key="Infomaniak.Style.Thickness.Right.M">0,0,16,0</Thickness>
     <!-- Corner Radius -->
     <CornerRadius x:Key="Infomaniak.Style.CornerRadius.S">4</CornerRadius>
     <CornerRadius x:Key="Infomaniak.Style.CornerRadius.M">8</CornerRadius>
