--- a/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
@@ -71,6 +71,7 @@
     <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XL">32</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Uniform.XXL">36</Thickness>
 
+    <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Horizontal.XS">8,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Horizontal.S">12,0</Thickness>
     <Thickness x:Key="Infomaniak.Style.Thickness.Sides.Horizontal.M">16,0</Thickness>
 
