feat(sync-selector): enhance flyout functionality and hover management

--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncSelector.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/SyncSelector.xaml
@@ -179,7 +179,8 @@
                 <!-- Flyout -->
                 <Button.Flyout>
                     <Flyout x:Name="DriveFlyout"
-                            Placement="Bottom">
+                            Placement="Bottom"
+                            Opened="DriveFlyout_Opened">
                         <Flyout.FlyoutPresenterStyle>
                             <Style TargetType="FlyoutPresenter">
                                 <Setter Property="MinWidth"
