feat(animation winui3): Add lottie viewer component
- Added LottiePlayer control for dynamic animation display in the UI.
- Add a lottie conversion script from dot lottie to json.
- Updated project dependencies for compatibility.

--- a/src/gui4/windows/kDrive client/kDrive client/OnBoardingWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/OnBoardingWindow.xaml
@@ -62,14 +62,10 @@
         <customControls:AppTitleBarLogo Grid.Column="0"
                                         Margin="8,8,0,0" />
 
-        <Image Grid.Row="1"
-               Grid.Column="2"
-               Stretch="Uniform"
-               MaxHeight="120">
-            <Image.Source>
-                <SvgImageSource UriSource="ms-appx:///Assets/Images/folder.svg" />
-            </Image.Source>
-        </Image>
+        <customControls:LottiePlayer Grid.Row="1"
+                                     Grid.Column="2"
+                                     Height="120"
+                                     UriSource="ms-appx:///Assets/Animations/kDrive-LoaderStroke.json"/>
         <Border Grid.Row="1"
                 Grid.Column="0">
             <Frame x:Name="ContentFrame" />
